Fix horizontal scrollbar in feed; Improve look of content a bit

--- a/src/components/genericLayout/content/narrowContent/narrowContent.module.scss
+++ b/src/components/genericLayout/content/narrowContent/narrowContent.module.scss
@@ -1,10 +1,10 @@
 .root {
 	display: grid;
 	grid-auto-flow: column;
-	grid-template-columns: 1fr 656px 1.5fr;
+	grid-template-columns: 1fr minmax(0, 720px) 1.5fr;
 
 	@include less920px {
-		grid-template-columns: 1fr 656px 1fr;
+		grid-template-columns: 1fr minmax(0, 720px) 1fr;
 	}
 
 	@include less720px {
